clang/test/BSC/Negative/Generic/StructAndFunction/illegal_type_add/illegal_type_add.cbs
// RUN: %clang_cc1 -verify %s

struct S{
  int a;
};

T f4<T>(T a) {
  struct S s1;
  int y = 1;
  T z = s1 + y; // expected-error {{invalid operands to binary expression ('struct S' and 'int')}}
  return z;
}

int main(){
  int a = 1;
  int b = f4<int>(a);
  return 0;
}